[package]
name = "drw"
version = "0.1.0"
authors = ["Jonathan Chasteen <jonathan.chasteen@live.com>"]
edition = "2018"
description = "Drawing library using xcb"
license = "LICENSE"
repository = "https://github.com/jechasteen/patina.git"
homepage = "https://github.com/jechasteen/patina"
documentation = "https://github.com/jechasteen/patina"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9.0"